# exp_env

./: .gitignore  README.md  nohup.out  pyproject.toml
src/exp_env/: __init__.py
src/exp_env/data/: data_maker_base.py  embedding.py  lorenz.py  mackey.py  triangle.py
src/exp_env/linear_regressor/: base.py  lasso.py  pretrained_linear.py  regressors.py  ridge.py
src/exp_env/llama/: example_chat_completion.py
src/exp_env/quantization/: bitnet.py  quantization_funs.py
src/exp_env/reservoir/: base.py  bit_esn.py  delay_esn.py  esn.py  reservoirs.py
src/exp_env/transformers/models/: reservoir.py  transformer.py
src/exp_env/transformers/modules/: attention.py  dropout.py  ffn.py  position_emb.py
src/exp_env/utils/: utils.py
