[project]
name = "exp-env"
version = "0.1.0"
description = "Add your description here"
authors = [
    { name = "yama-yeah", email = "b1021091@fun.ac.jp" }
]
dependencies = [
    "ipykernel>=6.29.4",
    "pandas>=2.2.1",
    "polars>=0.20.18",
    "pyarrow>=15.0.2",
    "matplotlib>=3.8.4",
    "torch>=2.2.2",
]
readme = "README.md"
requires-python = ">= 3.11"

[project.scripts]
hello = "exp_env:hello"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = []

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/exp_env"]
