[project]
name = "exp-env"
version = "0.1.0"
description = "Add your description here"
authors = [
    { name = "yama-yeah", email = "b1021091@fun.ac.jp" }
]
dependencies = [
    "ipykernel>=6.29.4",
    "pandas>=2.2.1",
    "polars>=0.20.18",
    "pyarrow>=15.0.2",
    "matplotlib>=3.8.4",
    "torch>=2.2.0",
    "scikit-learn>=1.4.2",
    "sentence-transformers>=2.6.1",
    "datasets>=2.18.0",
    "transformers>=4.39.1",
    "setuptools>=69.3.0",
    "gensim>=3.3.2",
    "scipy==1.9.3",
    "zetascale>=2.4.2",
    "torchsummary>=1.5.1",
]
readme = "README.md"
requires-python = ">= 3.11"

[project.scripts]
hello = "exp_env:hello"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = []

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/exp_env"]
